<resources>
    <string name="app_name">QuePintó?</string>
    <string name="logoimg">LogoImg</string>
    <string name="login">Login</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="NoMUsu">Mail del Usuario</string>
    <string name="usuarioNombre">Nombre de usuario</string>
    <string name="NRegis">No estás registrado?</string>
    <string name="Registrate">Regístrate aquí</string>
    <string name="btnEventos">Buscar eventos!</string>
    <string name="btningreso">Ingresar</string>
    <string name="string_btningresar" />
    <string name="txtredsoc">Ingresa mediante las redes Sociales</string>
    <string name="adnd_vamos">A dónde vamos hoy?</string>
    <string name="eventos_creados">Mis Eventos Creados</string>
    <string name="favoritos">Mis Eventos Favoritos</string>
    <string name="busqueda_favoritos">Busca tus eventos</string>
    <string name="barra_busqueda">buscar</string>
    <string name="reg_usuario">REGISTRO DE USUARIO</string>
    <string name="NAME">NOMBRE</string>
    <string name="SURNAME">APELLIDO</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASS">CONTRASEÑA</string>
    <string name="CONF_PASS">CONFIRMAR CONTRASEÑA</string>
    <string name="bot_Env">ENVIAR</string>
    <string name="txt_nom">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correle">Correo Electrónico</string>
    <string name="confirmar_correo">Confirmar Correo</string>
    <string name="txtcontr">Contraseña</string>
    <string name="reg_evento">REGISTRO DE EVENTO</string>
    <string name="mod_evento">MODIFICAR EVENTO</string>
    <string name="txtconfcont">Confirmar Contraseña</string>
    <string name="NAME_EVENT">INGRESE NOMBRE DEL EVENTO</string>
    <string name="txt_nombre_evento">Nombre del evento</string>
    <string name="txt_evento">Categorias</string>
    <string name="txt_organizador">Organizador</string>
    <string name="ORGANIZER">ORGANIZADOR</string>
    <string name="txt_description">Descripción:</string>
    <string name="txt_Comentarios">Comentarios:</string>
    <string name="txt_EscribirComentarios">Escribir Comentario:</string>
    <string name="txt_VerComentarios">Leer Comentarios</string>
    <string name="txt_EscribeComentario">Mensaje</string>
    <string name="DESCRIPTION">DESCRIPCIÓN</string>
    <string name="txt_departamento">Departamento</string>
    <string name="departamento">Departamento</string>
    <string name="txt_ciudad">Ciudad</string>
    <string name="ciudad">Ciudad</string>
    <string name="txtdireccion">Dirección</string>
    <string name="direccion">Direccion</string>
    <string name="txt_map">Ubicar en Mapa</string>
    <string name="ver_map">Ver en Mapa</string>
    <string name="btnregistrar">Registrar</string>
    <string name="btnModificarEvento">Modificar</string>
    <string name="btnEliminarEvento">Eliminar</string>
    <string name="txt_fecha_hora_inicio">Fecha y Hora de inicio</string>
    <string name="txt_fecha_hora_fin">Fecha y Hora de finalización</string>
    <string name="btningresar">Ingresar</string>
    <string name="txorgy">Organízate y enucuentra dónde salir</string>
    <string name="olvco">Olvidó su Contraseña?</string>
    <string name="txtreccon">Recuperación de Contraseña</string>
    <string name="ejmail">ejemplo@gmail.com</string>
    >!---PERFIL!--->
    <string name="NAME_perf">NOMBRE:</string>
    <string name="APELL_perf">APELLIDO:</string>
    <string name="EMAIL_perf">EMAIL:</string>
    <string name="User_NAME_PERF">NOMBRE DE USUARIO:</string>
    <string name="ImgLogo">Imagen</string>
    <string name="btn_guard_camb">Guardar Cambios</string>
    ---------------------------------------------------
    <string name="usurioRegistroTV">Usuario</string>
    <string name="usurioRegistroET">USUARIO</string>
    <string name="requisitoPasswordTV">La contraseña tiene que contener al menos 8 caracteres, pueden contener numeros y los siguientes simbolos @/./+/-/_ solamente.
No puede ser solo numérico, y no puede ser similar a la información de usuario. </string>
    <string name="org">Organiza:</string>
    <string name="fch">Fecha:</string>
    <string name="regis">Registrarse</string>
    <string name="salir">Salir</string>
    <string name="txtfavoritos">No tienes favoritos? Salta del sofá y sal a divertirte!</string>
    <string-array name="Categorias">
        <item>Teatro</item>
        <item>Restaurant</item>
        <item>Festival</item>
        <item>Evento Deportivo</item>
        <item>Concierto</item>
        <item>Cine</item>
    </string-array>

</resources>