<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_hora_fin"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_evento"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre_evento"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="69dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="359dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NAME_EVENT"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="56dp"
        android:layout_height="27dp"
        android:text="@string/txt_map"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="487dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="153dp"
        android:layout_height="87dp"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="527dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_hora_inicio"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="244dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="347dp"
        android:layout_height="32dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="283dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="128dp"
        android:layout_height="26dp"
        android:text="@string/txt_organizador"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ORGANIZER"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_description"
        android:textColor="#BF2E2E"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="391dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/DESCRIPTION"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="426dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginStart="148dp"
        android:text="@string/btnregistrar"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="641dp" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="355dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="354dp" />

</androidx.constraintlayout.widget.ConstraintLayout>