<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tituloEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_nombre_evento"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textoFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloEvento"
        app:srcCompat="@drawable/crowd"
        android:contentDescription="@string/ImgLogo" />

    <EditText
        android:id="@+id/descripcionEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/txt_description"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textoOrganiza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoFecha"
        tools:text="@string/DESCRIPTION"
        tools:visibility="visible"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textoOrganiza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/txt_organizador"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textoUbicacion"
        app:layout_constraintStart_toStartOf="@+id/descripcionEvento"
        app:layout_constraintTop_toBottomOf="@+id/descripcionEvento" />

    <TextView
        android:id="@+id/textoUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/txt_map"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textoOrganiza"
        app:layout_constraintTop_toBottomOf="@+id/textoOrganiza" />

    <TextView
        android:id="@+id/textoFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_fecha_hora_fin"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descripcionEvento"
        app:layout_constraintStart_toStartOf="@+id/descripcionEvento"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/txt_fecha_hora_inicio" />

</androidx.constraintlayout.widget.ConstraintLayout>